--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "bugs": {
     "url": "https://github.com/elfonts/conestar/issues"
   },
-  "homepage": "https://github.com/elfonts/conestar#readme"
+  "homepage": "."
 }
